--- a/.github/workflows/discord-notify.yml
+++ b/.github/workflows/discord-notify.yml
@@ -6,9 +6,6 @@ on:
       sha:
         required: true
         type: string
-      webhook_url:
-        required: true
-        type: string
       guild_owner_id:
         required: true
         type: string
@@ -18,6 +15,10 @@ on:
       all_changed_files:
         required: true
         type: string
+    secrets:
+      DISCORD_WEBHOOK_URL:
+        required: true
+        description: "Discord Webhook URL"
 
 
 jobs:
@@ -28,7 +29,7 @@ jobs:
       - name: Discord notification
         uses: Ilshidur/action-discord@master
         env:
-          DISCORD_WEBHOOK: ${{ inputs.webhook_url }}
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK_URL }}
           DISCORD_AVATAR: 'https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png'
           DISCORD_MENTIONS: '{
             "content": "@everyone <@&${{ inputs.guild_developer_role_id }}> <@${{ inputs.guild_owner_id }}>",
