--- a/.github/workflows/discord-notify.yml
+++ b/.github/workflows/discord-notify.yml
@@ -6,11 +6,13 @@ on:
       sha:
         required: true
         type: string
+      changed_files:
+        required: true
+        type: string
     secrets:
       DISCORD_WEBHOOK_URL:
         required: true
         description: "Discord Webhook URL"
-
 
 jobs:
   notify:
@@ -31,6 +33,7 @@ jobs:
             { "name": "Event", "value": "${{github.event_name}}", "inline": true },
             { "name": "Job", "value": "${{github.job}}", "inline": true },
             { "name": "Commit Message", "value": "[${{ inputs.sha }}](https://github.com/${{github.repository}}/commit/${{github.sha}}) - `${{github.event.head_commit.message}}`" },
+            { "name": "Changed Files", "value": "${{ inputs.changed_files }}" },
             { "name": "Author", "value": "[${{github.event.head_commit.author.name}}](https://github.com/${{github.actor}})" }
             ],
             "color":1127128,
