--- a/.github/workflows/discord-notify.yml
+++ b/.github/workflows/discord-notify.yml
@@ -6,10 +6,6 @@ on:
       sha:
         required: true
         type: string
-      changed_files:
-        required: true
-        type: string
-
     secrets:
       DISCORD_WEBHOOK_URL:
         required: true
@@ -18,6 +14,16 @@ jobs:
   notify:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v5
+        with:
+          fetch-depth: 0
+
+      - name: Get changed files
+        id: changed-files
+        uses: tj-actions/changed-files@v34
+        with:
+          separator: "----------------------"
+
       # Thanks for https://github.com/Ilshidur/action-discord/issues/88#issuecomment-1322630197
       - name: Discord notification
         uses: Ilshidur/action-discord
@@ -33,7 +39,7 @@ jobs:
             { "name": "Event", "value": "${{github.event_name}}", "inline": true },
             { "name": "Job", "value": "${{github.job}}", "inline": true },
             { "name": "Commit Message", "value": "[${{ inputs.sha }}](https://github.com/${{github.repository}}/commit/${{github.sha}}) - `${{github.event.head_commit.message}}`" },
-            { "name": "Changed Files", "value": "${{ inputs.changed_files }}" },
+            { "name": "Changed Files", "value": "${{ steps.changed-files.outputs.all_changed_files }}" },
             { "name": "Author", "value": "[${{github.event.head_commit.author.name}}](https://github.com/${{github.actor}})" }
             ],
             "color":1127128,
