--- a/.github/workflows/discord-notify.yml
+++ b/.github/workflows/discord-notify.yml
@@ -2,10 +2,6 @@ name: Discord Notify
 
 on:
   workflow_call:
-    inputs:
-      sha:
-        required: true
-        type: string
     secrets:
       DISCORD_WEBHOOK_URL:
         required: true
@@ -24,6 +20,11 @@ jobs:
         with:
           separator: "----------------------"
 
+      - uses: benjlevesque/short-sha@v2.1
+        id: short-sha
+        with:
+            length: 7
+
       # Thanks for https://github.com/Ilshidur/action-discord/issues/88#issuecomment-1322630197
       - name: Discord notification
         uses: Ilshidur/action-discord@master
@@ -38,7 +39,7 @@ jobs:
             { "name": "Branch", "value": "[${{github.ref_name}}](https://github.com/${{github.repository}}/tree/${{github.ref_name}})", "inline": true },
             { "name": "Event", "value": "${{github.event_name}}", "inline": true },
             { "name": "Job", "value": "${{github.job}}", "inline": true },
-            { "name": "Commit Message", "value": "[${{ inputs.sha }}](https://github.com/${{github.repository}}/commit/${{github.sha}}) - `${{github.event.head_commit.message}}`" },
+            { "name": "Commit Message", "value": "[${{ steps.short-sha.outputs.sha }}](https://github.com/${{github.repository}}/commit/${{github.sha}}) - `${{github.event.head_commit.message}}`" },
             { "name": "Changed Files", "value": "${{ steps.changed-files.outputs.all_changed_files }}" },
             { "name": "Author", "value": "[${{github.event.head_commit.author.name}}](https://github.com/${{github.actor}})" }
             ],
