--- a/.github/workflows/discord-notify.yml
+++ b/.github/workflows/discord-notify.yml
@@ -44,7 +44,7 @@ jobs:
             { "name": "Event", "value": "${{github.event_name}}", "inline": true },
             { "name": "Job", "value": "${{inputs.job_name}}", "inline": true },
             { "name": "Commit Message", "value": "[${{ steps.short-sha.outputs.sha }}](https://github.com/${{github.repository}}/commit/${{github.sha}}) - `${{github.event.head_commit.message}}`" },
-            { "name": "Changed Files", "value": "${{ steps.changed-files.outputs.all_changed_files }}" },
+            { "name": "Changed Files", "value": "```${{ steps.changed-files.outputs.all_changed_files }}```" },
             { "name": "Author", "value": "[${{github.event.head_commit.author.name}}](https://github.com/${{github.actor}})" }
             ],
             "color":1127128,
