--- a/.github/workflows/discord-notify.yml
+++ b/.github/workflows/discord-notify.yml
@@ -22,7 +22,7 @@ jobs:
         id: changed-files
         uses: tj-actions/changed-files@v34
         with:
-          separator: $'\n'
+          separator: ","
 
       - uses: benjlevesque/short-sha@v2.1
         id: short-sha
